--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
+        <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://www.twitter.com/jehanzebTtareen"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/Jehanzeb27" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/jehanzeb__" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://www.github.com/jehanzebtareen" class="github"><i class="bi bi-github"></i></a>
       </div>
 
@@ -86,12 +86,9 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Virtual Assistant &amp; Digital Marketing Specialist</h3>
+          <h3>Virtual Assistant</h3>
           <p class="fst-italic">
-            Bringing in 3+ years of Digital Marketing experience and 2+ years of Administration and Data Management experience from major 
-businesses in Pakistan. I have proficiency in managing and supporting daily Business activities, whether it be administrative or Digital 
-marketing related, or just plain Personal Assistance. Being fluent in English, open-minded, and friendly, I believe that I communicate efficiently with people around the 
-world.
+            With 3+ years of experience as a Virtual Assistant to clients from different parts of the world, I have estabilished myself as a professional Virtual Assistant in different areas like Business Development, Business Intelligence & Digital Marketing. I have proficiency in Leads Generation, Data Entry, Performance Monitoring, Online Research and many other similar tasks. With Fluency in English and being open-minded, I believe that I co-odinate efficiently with people around the world.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -104,15 +101,14 @@ world.
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Qualification:</strong> <span>Bachelor in Software Engineering (BSE)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jehanzeb2708@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
           <p>
-            I provide a variety of Virtual Assistance services. Visit the "Services" page to see full detail of what I offer. If you dont see your specific needs, contact me for a private discussion on how I can offer a tailor-made set of services just for you.
+            Visit the "Services" section to see full detail of what I can help ypu. If you dont see your specific needs listed there, Send me a message on the "Contact" Page of what you need and I will reach out to you to discuss possible solutions.
           </p>
         </div>
       </div>
@@ -127,7 +123,7 @@ world.
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="84" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="34" data-purecounter-duration="1" class="purecounter"></span>
             <p>Happy Clients</p>
           </div>
         </div>
@@ -135,7 +131,7 @@ world.
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="128" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="67" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
         </div>
@@ -143,7 +139,7 @@ world.
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="700+" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
         </div>
@@ -172,7 +168,7 @@ world.
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Comunication <i class="val">100%</i></span>
+            <span class="skill">Communication <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -186,7 +182,7 @@ world.
           </div>
 
           <div class="progress">
-            <span class="skill">Administrative <i class="val">75%</i></span>
+            <span class="skill">Administrative <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -197,21 +193,21 @@ world.
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">MS Excel Reporting <i class="val">80%</i></span>
+            <span class="skill">MS Excel <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Management <i class="val">90%</i></span>
+            <span class="skill">Management <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Graphic Design <i class="val">70%</i></span>
+            <span class="skill">Graphic Design <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -234,7 +230,7 @@ world.
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line" style="color: #ffbb2c;"></i>
-            <h3>Business Strategies</h3>
+            <h3>Business Intelligence</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -252,13 +248,13 @@ world.
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #47aeff;"></i>
-            <h3>Database Management</h3>
+            <h3>Databases</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h3>Comics</h3>
+            <i class="ri-gamepad-line" style="color: #e309ff;"></i>
+            <h3>Gaming</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -371,7 +367,7 @@ world.
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Jehanzeb Tareen</h4>
-            <p><em>Bringing in 3+ years of Digital Marketing experience and 2+ years of Administration and Data Management experience from major businesses in Pakistan. Apart from my services, You should consider me because I am reliable and consistent. I work professionally, without making any execuses no matter what situation I get into, handle any circumstance with maturity. So I am looking for clients who give me one opportunity to gain their trust and it will be worth it.</em></p>
+            <p><em>With 3+ years of experience as a Virtual Assistant to clients from different parts of the world, I have estabilished myself as a professional Virtual Assistant in different areas like Business Development, Business Intelligence & Digital Marketing. I have proficiency in Leads Generation, Data Entry, Performance Monitoring, Online Research and many other similar tasks. With Fluency in English and being open-minded, I believe that I co-odinate efficiently with people around the world.</em></p>
             <p>
             <ul>
               <li>Islamabad, Pakistan</li>
@@ -386,14 +382,31 @@ world.
             <h4>Bachelor of Software Engineering</h4>
             <h5>2018 - 2022</h5>
             <p><em>COMSATS University Islamabad, Wah Campus</em></p>
-            <p>Major in Data Science & Engineering</p>
+            <p>Major in Data Science</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
+
           <div class="resume-item">
-            <h4>Digital Marketing specialist</h4>
-            <h5>2021 - 2023</h5>
+            <h4>Business Development Virtual Assistant</h4>
+            <h5>2023 - Present</h5>
+            <p><em>Remote </em></p>
+            <p>
+            <ul>
+              <li>Data Entry & management (Sheets & MS Excel)</li>
+              <li>Manual Leads Generation on LinkedIn and other social platforms.</li>
+              <li>Performance Monitoring & Reporting (Google Looker Studio)</li>
+              <li>Affiliates Data Monitoring and Fraud Management</li>
+              <li>Administrative Assistance (Google Workspace)</li>
+              <li>Online Research(Market Competition Analysis)</li>
+            </ul>
+            </p>
+          </div> 
+          
+          <div class="resume-item">
+            <h4>Digital Marketing Specialist</h4>
+            <h5>2021 - 2022</h5>
             <p><em>Graana, ISB </em></p>
             <p>
             <ul>
@@ -401,28 +414,20 @@ world.
               <li>Did Region-wise Customer Research using automated tools.</li>
               <li>Designed and scheduled posts and stories on Social Media.</li>
               <li>Analyzed customer analytics and prepared bi-monthly conversion reports.</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Sales Analyst</h4>
-            <h5>2020 - 2021</h5>
-            <p><em>Zameen, ISB </em></p>
-            <p>
-            <ul>
               <li>Sales Data Analysis using MS Excel, Power BI.</li>
               <li>Was responsible for gathering, cleaning and transforming data for Statistical Analysis and Dashboarding.</li>
               <li>Formulizing Marketing strategies and allocating budgets for social media ads.</li>
             </ul>
             </p>
           </div>
+
           <div class="resume-item">
             <h4>Graphic Designer</h4>
-            <h5>2019 - Present</h5>
+            <h5>2019 - 2022</h5>
             <p><em>Fiverr, Freelance</em></p>
             <p>
             <ul>
-              <li>I Develop numerous marketing programs (logos, brochures, infographics, presentations, and advertisements).</li>
+              <li>I designed numerous graphics for marketing and other businesses. (logos, brochures, infographics, presentations, and advertisements).</li>
             </ul>
             </p>
           </div>
@@ -444,6 +449,24 @@ world.
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
+            <div class="icon"><i class="bx bx-search-alt"></i></div>
+            <h4><a href="">Leads Generation</a></h4>
+            <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
+          </div>
+        </div>
+
+        <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-google"></i></div>
+            <h4><a href="">Google Workspace</a></h4>
+            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
+          </div>
+        </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
             <div class="icon"><i class="bx bx-mail-send"></i></div>
             <h4><a href="">Email Communication</a></h4>
             <p>Clear and professional communication, building relationships and increased productivity. I use clear subject lines, be mindful of the recipient.</p>
@@ -461,8 +484,8 @@ world.
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-support"></i></div>
-            <h4><a href="">Personal Assistant</a></h4>
-            <p>If I am tasked with communicating on your behalf, all correspondence is handled respectfully and professionally.</p>
+            <h4><a href="">Personal Virtual Assistant</a></h4>
+            <p>If I am tasked with communicating and scheduling on your behalf, all correspondence is handled respectfully and professionally.</p>
           </div>
         </div>
 
@@ -471,7 +494,7 @@ world.
           <div class="icon-box">
             <div class="icon"><i class="bx bxs-briefcase"></i></div>
             <h4><a href="">Administrative</a></h4>
-            <p>I will provide administrative support to either an individual or a team to ensure the smooth-running of a business or relevant tasks.</p>
+            <p>I will provide administrative support to either an individual or a team to ensure the smooth-running of a business and increased productivity.</p>
           </div>
         </div>
 
@@ -486,7 +509,7 @@ world.
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-carousel"></i></div>
-            <h4><a href="">Ad Campaigns</a></h4>
+            <h4><a href="">PPC Management</a></h4>
             <p>PPC Ad Campaigns on Facebook, Instagram, LinkedIn, TikTok and Google Ads. </p>
           </div>
         </div>
