--- a/index.html
+++ b/index.html
@@ -538,6 +538,14 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxs-bar-chart-alt-2"></i></div>
+            <h4><a href="">Insights and Dashboarding</a></h4>
+            <p>Analyze Data in MS Excel and MS Power BI which will help you gain insights into your data through high-level visual summaries, charts, trends, and patterns.</p>
+          </div>
+        </div>
+
       </div>
 
     </div>
