--- a/index.html
+++ b/index.html
@@ -446,12 +446,19 @@
         <p>My Services</p>
       </div>
 
-      <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-mail-send"></i></div>
-            <h4><a href="">Email Communication</a></h4>
-            <p>Clear and professional communication, building relationships and increased productivity. I use clear subject lines, be mindful of the recipient.</p>
+            <div class="icon"><i class="bx bx-mail-sent"></i></div>
+            <h4><a href="">Leads Generation</a></h4>
+            <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-google"></i></div>
+            <h4><a href="">Google Workspace</a></h4>
+            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
           </div>
         </div>
 
@@ -484,15 +491,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-store"></i></div>
             <h4><a href="">Digital Marketing</a></h4>
-            <p>All-In-One Service for online brand promotion through social media marketing, Google Maps Setup, SEO and ad campaigns.  </p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-carousel"></i></div>
-            <h4><a href="">PPC Management</a></h4>
-            <p>PPC Ad Campaigns on Facebook, Instagram, LinkedIn, TikTok and Google Ads. </p>
+            <p>All-In-One Service for online brand promotion through social media marketing, Google Maps Setup, SEO and PPC campaigns management.  </p>
           </div>
         </div>
 
@@ -515,34 +514,8 @@
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bxs-bar-chart-alt-2"></i></div>
-            <h4><a href="">Insights and Dashboarding</a></h4>
+            <h4><a href="">Data Analytics</a></h4>
             <p>Analyze Data in MS Excel and MS Power BI which will help you gain insights into your data through high-level visual summaries, charts, trends, and patterns.</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxs-bar-chart-alt-2"></i></div>
-            <h4><a href="">Insights and Dashboarding</a></h4>
-            <p>Analyze Data in MS Excel and MS Power BI which will help you gain insights into your data through high-level visual summaries, charts, trends, and patterns.</p>
-          </div>
-        </div>
-
-        <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-search-alt"></i></div>
-            <h4><a href="">Leads Generation</a></h4>
-            <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
-          </div>
-        </div>
-
-        <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxl-google"></i></div>
-            <h4><a href="">Google Workspace</a></h4>
-            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
           </div>
         </div>
 
