--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
         <h2>Services</h2>
         <p>My Services</p>
       </div>
-
+        <div class="row">  
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-mail-sent"></i></div>
+            <div class="icon"><i class="bx bx-mail-send"></i></div>
             <h4><a href="">Leads Generation</a></h4>
             <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
           </div>
