--- a/index.html
+++ b/index.html
@@ -469,8 +469,10 @@
             <p>Word, PowerPoint, Excel. All Documentation tasks done professionally.</p>
           </div>
         </div>
+       </div>   
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+      <div class="row">          
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-support"></i></div>
             <h4><a href="">Personal Virtual Assistant</a></h4>
