--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
             <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
           </div>
         </div>
-
+        <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-google"></i></div>
-            <h4><a href="">Google Workspace</a></h4>
+            <h4><a href="">Google Workspacey</a></h4>
             <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
           </div>
         </div>
