--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <h4><a href="">Microsoft Office</a></h4>
             <p>Word, PowerPoint, Excel. All Documentation tasks done professionally.</p>
           </div>
-        </div>   
+        </div>  </div> 
 
        <div class="row">   
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
