--- a/index.html
+++ b/index.html
@@ -445,32 +445,33 @@
         <h2>Services</h2>
         <p>My Services</p>
       </div> 
-      <div class="row">  
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxl-google"></i></div>
-            <h4><a href="">Google Workspacey</a></h4>
-            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
-          </div>
-        </div>
+      <div class="row">
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxl-microsoft"></i></div>
-            <h4><a href="">Microsoft Office</a></h4>
-            <p>Word, PowerPoint, Excel. All Documentation tasks done professionally.</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+       <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-mail-send"></i></div>
             <h4><a href="">Leads Generation</a></h4>
             <p>I will Find leads according to your business from Social Platforms, generate new clients and help develop your business.</p>
           </div>
         </div>
+        
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-google"></i></div>
+            <h4><a href="">Google Workspace</a></h4>
+            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-microsoft"></i></div>
+            <h4><a href="">Microsoft Office</a></h4>
+            <p>Word, PowerPoint, Excel. All Documentation tasks done professionally.</p>
+          </div>
+        </div>
   
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-support"></i></div>
             <h4><a href="">Personal Virtual Assistant</a></h4>
