--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Jehanzeb Tareen</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Virtual Assistant</span> from Pakistan.</h2>
+      <h2>I'm a proactive <span>Virtual Assistant</span> from Pakistan.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -88,12 +88,12 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Virtual Assistant</h3>
           <p class="fst-italic">
-            With 3+ years of experience as a Virtual Assistant to clients from different parts of the world, I have estabilished myself as a professional Virtual Assistant in different areas like Business Development, Business Intelligence & Digital Marketing. I have proficiency in Leads Generation, Data Entry, Performance Monitoring, Online Research and many other similar tasks. With Fluency in English and being open-minded, I believe that I co-odinate efficiently with people around the world.
+            With 5+ years of experience as a Virtual Assistant to executives from USA and Pakistan, I have estabilished myself as a successful Executive VA in different fields including Business Development, Digital Marketing and Finance. I started my Virtual Assistant journey from the second year of my Uuniversity. I got my Software Engineering Degree in January 2023, Since then I have working full time as a Virtual Assistant. 
           </p>
-          <div class="row">
+          <div class="row"> 
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 August 2000</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 August, 2000</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Upwork:</strong> <span> <a href="https://www.upwork.com/freelancers/~010dc1beb35d0b0e43">Jehanzeb T.</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 304 5589232</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Islamabad, Pakistan</span></li>
@@ -101,14 +101,14 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Qualification:</strong> <span>Bachelor in Software Engineering (BSE)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jehanzeb2708@gmail.com</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Visit the "Services" section to see full detail of what I can help ypu. If you dont see your specific needs listed there, Send me a message on the "Contact" Page of what you need and I will reach out to you to discuss possible solutions.
+            I am a tech-savvy guy. Even If I am not working, I spend most of my day on my laptop, either playing a video-game or checking out a new software tool. That's how I learned that I can host an interactive web portfolio on Github for free, pretty cool right!
           </p>
         </div>
       </div>
@@ -131,7 +131,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="67" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="82" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="750" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="3000" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
         </div>
@@ -148,7 +148,7 @@
           <div class="count-box">
             <i class="bi bi-award"></i>
             <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Certificates</p>
+            <p>Certifications</p>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
           <div class="progress">
             <span class="skill">Communication <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -184,7 +184,7 @@
           <div class="progress">
             <span class="skill">Administrative <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -195,21 +195,21 @@
           <div class="progress">
             <span class="skill">MS Excel <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Management <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Graphic Design <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -230,13 +230,13 @@
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line" style="color: #ffbb2c;"></i>
-            <h3>Business Intelligence</h3>
+            <h3>Business Analytics</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-            <h3>Statistics & Analytics</h3>
+            <h3>Performance & Statistics</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -248,7 +248,7 @@
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #47aeff;"></i>
-            <h3>Databases</h3>
+            <h3>Database Management</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -260,7 +260,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-disc-line" style="color: #b20969;"></i>
-            <h3>The Weeknd</h3>
+            <h3>Coldplay</h3>
           </div>
         </div>
 
@@ -359,7 +359,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <p>Check out My Resume</p>
       </div>
 
       <div class="row">
@@ -367,12 +367,12 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Jehanzeb Tareen</h4>
-            <p><em>With 3+ years of experience as a Virtual Assistant to clients from different parts of the world, I have estabilished myself as a professional Virtual Assistant in different areas like Business Development, Business Intelligence & Digital Marketing. I have proficiency in Leads Generation, Data Entry, Performance Monitoring, Online Research and many other similar tasks. With Fluency in English and being open-minded, I believe that I co-odinate efficiently with people around the world.</em></p>
+            <p><em>With a 5+ years experience of being a Virtual Assistant to 3 different exectuives, I have gained expertise in assisting the daily activites of a busy executive, reducing their workload, streamlining their daily work-routine, organizing their tasks and priorities, bringing efficiency to their job and basically making their life much convenient. List if my clientele is given below:</em></p>
             <p>
             <ul>
-              <li>Islamabad, Pakistan</li>
-              <li>+92 304 5589232</li>
-              <li>jehanzeb2708@gmail.com</li>
+              <li>Hovav Frank, USA (CMO | Hostadvice )</li>
+              <li>Malik Afzal Hussein, USA (CEO | Graana/Zameen)</li>
+              <li>Junaid Akhter, PAK (Founder | Shoe Planet)</li>
             </ul>
             </p>
           </div>
@@ -380,41 +380,44 @@
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Bachelor of Software Engineering</h4>
-            <h5>2018 - 2022</h5>
-            <p><em>COMSATS University Islamabad, Wah Campus</em></p>
+            <h5>2019 - 2023</h5>
+            <p><em>COMSATS University Islamabad</em></p>
             <p>Major in Data Science</p>
+            <h4>Certifications</h4>
+            <p><a href="https://www.credly.com/users/jehanzeb-tareen">View my verified certifications at Credly</a></p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
 
           <div class="resume-item">
-            <h4>Business Development Virtual Assistant</h4>
-            <h5>2023 - Present</h5>
-            <p><em>Remote </em></p>
+            <h4>Executive Assistant - Business Development</h4>
+            <h5>2023 - 2025</h5>
+            <p><em>Hostadvice </em></p>
             <p>
             <ul>
-              <li>Data Entry & management (Sheets & MS Excel)</li>
-              <li>Manual Leads Generation on LinkedIn and other social platforms.</li>
+              <li>Data Entry & Management</li>
+              <li>Leads Generation</li>
               <li>Performance Monitoring & Reporting (Google Looker Studio)</li>
-              <li>Affiliates Data Monitoring and Fraud Management</li>
-              <li>Administrative Assistance (Google Workspace)</li>
+              <li>Affiliates Data Monitoring and Fraud Detection</li>
+              <li>Meetings and Calendar Management</li>
               <li>Online Research(Market Competition Analysis)</li>
+              <li>Email Communication</li>
             </ul>
             </p>
           </div> 
           
           <div class="resume-item">
-            <h4>Digital Marketing Specialist</h4>
-            <h5>2021 - 2022</h5>
-            <p><em>Graana, ISB </em></p>
+            <h4>Virtual Assistant - Digital Marketing</h4>
+            <h5>2021 - 2023</h5>
+            <p><em>Graana/Zameen </em></p>
             <p>
             <ul>
-              <li>Was Responsible for managing daily Social Media activities, Google Maps Manager, Running Ad campaigns on Instagram and Facebook.</li>
+              <li>Was Responsible for managing daily Social Media activities, Google Maps Profile Manager, Running Ad campaigns on Meta.</li>
               <li>Did Region-wise Customer Research using automated tools.</li>
-              <li>Designed and scheduled posts and stories on Social Media.</li>
+              <li>Designed and scheduled posts/stories on Social Media.</li>
               <li>Analyzed customer analytics and prepared bi-monthly conversion reports.</li>
-              <li>Sales Data Analysis using MS Excel, Power BI.</li>
+              <li>Sales Data Analysis using MS Excel, Looker.</li>
               <li>Was responsible for gathering, cleaning and transforming data for Statistical Analysis and Dashboarding.</li>
               <li>Formulizing Marketing strategies and allocating budgets for social media ads.</li>
             </ul>
@@ -422,12 +425,12 @@
           </div>
 
           <div class="resume-item">
-            <h4>Graphic Designer</h4>
-            <h5>2019 - 2022</h5>
-            <p><em>Fiverr, Freelance</em></p>
+            <h4>Virtual Assistant - Graphic Designer</h4>
+            <h5>2020 - 2021</h5>
+            <p><em>Shoe Planet</em></p>
             <p>
             <ul>
-              <li>I designed numerous graphics for marketing and other businesses. (logos, brochures, infographics, presentations, and advertisements).</li>
+              <li>I designed numerous graphics for Shoe Planets Social Media which included mostly posts, stories, ads and flyers.</li>
             </ul>
             </p>
           </div>
@@ -459,7 +462,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-google"></i></div>
             <h4><a href="">Google Workspace</a></h4>
-            <p>Shared Productivity on Google Workspace with live documentation, data entry and vice versa.</p>
+            <p>Shared Productivity on Google Workspace with live documentation, data entry and professional email communication.</p>
           </div>
         </div>
 
@@ -499,7 +502,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-search-alt"></i></div>
             <h4><a href="">Search Engine Optimization (SEO)</a></h4>
-            <p>Traffic from free, organic, editorial, and natural search results in search engines.</p>
+            <p>Traffic from free, organic, editorial and natural search results in search engines.</p>
           </div>
         </div>
 
@@ -515,7 +518,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxs-bar-chart-alt-2"></i></div>
             <h4><a href="">Data Analytics</a></h4>
-            <p>Analyze Data in MS Excel and MS Power BI which will help you gain insights into your data through high-level visual summaries, charts, trends, and patterns.</p>
+            <p>Analyze Data in MS Excel, Looker or Power BI which will help you gain insights into your business through high-level visual summaries, story-telling, trends and patterns.</p>
           </div>
         </div>
 
@@ -678,16 +681,16 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Tareen House, Mangial, Fatehjang Road, ISB 44000</p>
+            <p>CB-761 Lane 5, GT Road, ISB 44000</p>
           </div>
         </div>
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
-            <h3>Social Profiles</h3>
+            <h3>Social</h3>
             <div class="social-links">
-              <a href="https://www.twitter.com/jehanzebTtareen" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.twitter.com/jehanzebTtareen" class="twitter"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.facebook.com/Jehanzeb27" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/jehanzeb__" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
