--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://www.twitter.com/jehanzebTtareen"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.twitter.com/jehanzebTtareen"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/Jehanzeb27" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/jehanzeb__" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.github.com/jehanzebtareen" class="github"><i class="bi bi-github"></i></a>
@@ -88,7 +88,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Virtual Assistant</h3>
           <p class="fst-italic">
-            With 5+ years of experience as a Virtual Assistant to executives from USA and Pakistan, I have estabilished myself as a successful Executive VA in different fields including Business Development, Digital Marketing and Finance. I started my Virtual Assistant journey from the second year of my Uuniversity. I got my Software Engineering Degree in January 2023, Since then I have working full time as a Virtual Assistant. 
+            With 5+ years of experience as a Virtual Assistant to executives from USA and Pakistan, I have estabilished myself as a successful Executive VA in different fields including Business Development, Digital Marketing and Finance. I started my Virtual Assistant journey from the second year of my University. I got my Software Engineering Degree in January 2023, Since then I have been working full time as a Virtual Assistant. 
           </p>
           <div class="row"> 
             <div class="col-lg-6">
@@ -168,7 +168,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Communication <i class="val">100%</i></span>
+            <span class="skill">Communication <i class="val">98%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -182,7 +182,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Administrative <i class="val">100%</i></span>
+            <span class="skill">Administrative <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -195,21 +195,21 @@
           <div class="progress">
             <span class="skill">MS Excel <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Management <i class="val">95%</i></span>
+            <span class="skill">Management <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Graphic Design <i class="val">85%</i></span>
+            <span class="skill">Graphic Design <i class="val">88%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -367,7 +367,7 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Jehanzeb Tareen</h4>
-            <p><em>With a 5+ years experience of being a Virtual Assistant to 3 different exectuives, I have gained expertise in assisting the daily activites of a busy executive, reducing their workload, streamlining their daily work-routine, organizing their tasks and priorities, bringing efficiency to their job and basically making their life much convenient. List if my clientele is given below:</em></p>
+            <p><em>With a 5+ years experience of being a Virtual Assistant to 3 different exectuives, I have gained expertise in assisting the daily activites of a busy executive, reducing their workload, streamlining their daily work-routine, organizing their tasks and priorities, bringing efficiency to their job and basically making their life much convenient. List of my clientele is given below:</em></p>
             <p>
             <ul>
               <li>Hovav Frank, USA (CMO | Hostadvice )</li>
