--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://www.twitter.com/jehanzebTtareen"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
-  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
+        <a href="https://www.twitter.com/jehanzebTtareen"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+  <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
 </svg></a>
         <a href="https://www.facebook.com/Jehanzeb27" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/jehanzeb__" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -692,7 +692,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social</h3>
             <div class="social-links">
-              <a href="https://www.twitter.com/jehanzebTtareen" class="twitter"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.twitter.com/jehanzebTtareen" class="twitter"><i <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+  <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+</svg>></i></a>
               <a href="https://www.facebook.com/Jehanzeb27" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/jehanzeb__" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/jehanzeb-tareen/" class="linkedin"><i class="bi bi-linkedin"></i></a>
